# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  bot.py  config.py  debug_regex.py  pyproject.toml
bot/handlers/: __init__.py  intent_router.py  keyboard.py
bot/handlers/commands/: __init__.py
bot/services/: llm_client.py  lms_client.py
